# rust-uefi-sample

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  x86_64-unknown-efi.json
src/: lib.rs  main.rs
